# invoice-data-extraction-using-ocr

./: .gitignore  README.md  constants.py  demo.py  main.py  pyproject.toml  utils.py
output/: final_result.xlsx
