[project]
name = "data-extraction-using-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "paddleocr>=3.2.0",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["kagglehub>=0.3.13", "pre-commit>=4.3.0"]
